sbi-manifests/sbi-cms-platform-notification-service/sbi-cms/templates/deployment.yaml
---
# Source: sbi-cms/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbi-cms-platform-notification-service
  namespace: sbi
  labels:
    app: sbi-cms-platform-notification-service
    intent: apps
spec:
  selector:
    matchLabels:
      app: sbi-cms-platform-notification-service
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sbi-cms-platform-notification-service
        intent: apps
      annotations:
        kubernetes.io/psp: eks.privileged
        "fss.com/app-configmap-hash": 516e937156c211f20c45d5b9455933f24f2f2aa9f8703da721b11a83bb721ff2
    spec:
      serviceAccountName: sbi-cms-platform-notification-service-sa
      volumes:
      containers:
        - name: sbi-cms-platform-notification-service
          image: 736483234466.dkr.ecr.ap-south-1.amazonaws.com/sbi-cms-platform-notification-service:sbi-uat.v101
          volumeMounts:
          ports:
            - containerPort: 8096
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      nodeSelector:
        app: sbi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
